2019-04-16 Massimo Manghi <mxmanghi@apache.org>
    * src/mod_rivet_ng/: also the worker and lazy bridge transitioned to 
    the new interpreter model

2019-04-13 Massimo Manghi <mxmanghi@apache.org>
    * doc/xml/commands.xml: Correct wrong header in ::rivet::http_accept code example

2019-03-05 Massimo Manghi <mxmanghi@apache.org>
    * src/rivet.h: Better semantics for macros RIVET_FOREACH_INTERPRETER and
    RIVET_FOREACH_VIRTUAL_HOST

2019-01-21 Massimo Manghi <mxmanghi@apache.org>
	* src/mod_rivet_ng/*: first draft version that compiles and runs with prefork

2019-01-21 Massimo Manghi <mxmanghi@apache.org>
	* src/rivet.h: Add error message buffer size definition (was still hardcoded
	here and there)

2019-01-14 Massimo Manghi <mxmanghi@apache.org>
	* src/mod_rivet_ng/rivetCore.c: add experimental ::rivet::thread_id
	command

2019-01-08 Massimo Manghi <mxmanghi@apache.org>
	* : new branch quattuor created with an initial commit that tries
	to remodel the initialization, optimize intepreter creation, remove
	unneeded structures and other data keeping in mind the goal of
	abating complexity 

2019-01-05 Massimo Manghi <mxmanghi@apache.org>
	* doc/: merging from 3.1 fixes to various broken docbook elements
	 and new entities to external resources' URLs
	* src/mod_rivet_ng/rivetCore.c,rivet_worker_mpm.c: hardcoded buffer size into
	their correct macro definitions

2019-01-05 Massimo Manghi <mxmanghi@apache.org>
	* doc/: merging from 3.1 fixes to various broken docbook elements
	and new entities to external resources' URLs

2018-12-24 Georgios Petasis <petasisg@apache.org>
	* README.md: Added badges also for the GitHub fork at:
	https://github.com/petasis/tcl-rivet.

	* .appveyor.yml: Enhancements to not rely on hard-coded paths.

2018-12-23 Massimo Manghi <mxmanghi@apache.org>
    * cmake/CMakeLists.txt: starting with rivet 3 we need Tcl > 8.6.1

2018-12-20 Georgios Petasis <petasisg@apache.org>